done: JS,HTML and CSS styling

--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
 <body>
     <div class="panels">
         <div class="panel panel1">
-            <p>Happy</p>
-            <p>Makarsankranti</p>
-            <p>To everyone</p>
+            <p>Every </p>
+            <p>Failure</p>
+            <p>is not Fatal</p>
         </div>
         <div class="panel panel2">
-            <p>Happy</p>
-            <p>Dhanteras</p>
-            <p>To everyone</p>
+            <p></p>
+            <p>is</p>
+            <p></p>
         </div>
         <div class="panel panel3">
-            <p>Happy</p>
-            <p>Diwali</p>
-            <p>To everyone</p>
+            <p>Every</p>
+            <p>Success</p>
+            <p>is not Final.</p>
         </div>
         <div class="panel panel4">
-            <p>Happy</p>
-            <p>Christmas</p>
-            <p>To everyone</p>
+            <p></p>
+            <p>in</p>
+            <p></p>
         </div>
         <div class="panel panel5">
-            <p>Happy</p>
-            <p>Eid</p>
-            <p>To everyone</p>
+            <p>Its the courage to</p>
+            <p>progress</p>
+            <p>that counts</p>
         </div>
     </div>
 
